# Sigma7Applications

./: .gitignore  CMakeLists.txt
01-WorskpaceExtensionSimu/: CMakeLists.txt  CMakeLists.txt~  Nouveau document~  Readme~  controller.cpp  controller.cpp~  kuka_iiwa.urdf  proxy6d.urdf  simviz.cpp  simviz.cpp~  simvizPANDA.cpp~  world.urdf  world.urdf~
02-HapticDeviceDriver/: CMakeLists.txt  controller.cpp  kuka_iiwa.urdf  proxy.urdf  proxy6d.urdf  simviz.cpp  world.urdf
03-HapticConstruction/: CMakeLists.txt  CMakeLists.txt~  controller.cpp  controller.cpp~  kuka_iiwa.urdf  simviz.cpp  world.urdf
04-HapticDeviceHumanInteraction/: CMakeLists.txt~  controller.cpp  controller.cpp~  kuka_iiwa.urdf  simviz.cpp  world.urdf
04-HapticDeviceHumanInteraction_ini/: CMakeLists.txt  kuka_iiwa.urdf
05-HapticDeviceGuidance/: CMakeLists.txt  controller.cpp  kuka_iiwa.urdf  simviz.cpp  world.urdf
06-HapticGuidanceFranka/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
07-UnifiedHapticControlSurfaceAlignment/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
08-UnifiedHapticControlDualPlaneExperiment/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
08-UnifiedHapticControlDualPlaneExperiment/data_logging/: logger.py  plotter.py
09-passivityTests/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
10-UnifiedHapticControlCurvedSurfaceExperiment/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
10-UnifiedHapticControlCurvedSurfaceExperiment/data_logging/: logger.py  plotter.py
11-UnifiedHapticControlForceSpaceIdentification/: CMakeLists.txt  controller.cpp  panda_arm_sim.urdf  simviz.cpp  world.urdf
12-ContactDirectionDetectionParticleFilter/: CMakeLists.txt  app.cpp  controller.cpp  sphere.urdf  world.urdf
13-LocallySeparatedHapticControl/: CMakeLists.txt  Logger.h  sphere.urdf  world.urdf
14-ExperimentStiffnessVariation/: CMakeLists.txt  world.urdf
Model/: kuka_iiwa.urdf~  panda_arm.urdf  panda_arm.urdf~  panda_arm_hand.urdf  panda_arm_hand.urdf~  proxy.urdf  proxy6d.urdf
Model/meshes_iiwa/: base.mtl  link6.mtl
Model/meshes_panda/: finger.obj.mtl  hand.obj.mtl  link0.obj.mtl  link2.obj.mtl  link5.obj.mtl
Model/objects/: CurvePart.mtl
Model/objects/mtl/: construction.mtl  part.mtl
